@@ -44,7 +44,6 @@ from autopyfactory.configloader import Config, ConfigManager
 from autopyfactory.logserver import LogServer
 from autopyfactory.pluginsmanagement import QueuePluginDispatcher
 from autopyfactory.pluginsmanagement import FactoryPluginDispatcher
-from autopyfactory.proxymanager import ProxyManager
 from autopyfactory.queues import APFQueuesManager
 
 major, minor, release, st, num = sys.version_info
@@ -504,6 +503,13 @@ class Factory(object):
         # Handle ProxyManager configuration
         usepman = fcl.getboolean('Factory', 'proxymanager.enabled')
         if usepman:      
+
+            try:
+                from autopyfactory.proxymanager import ProxyManager
+            except:
+                self.log.critical('proxymanager cannot be imported')
+                sys.exit(0) 
+
             pcf = fcl.get('Factory','proxyConf')
             self.log.debug("proxy.conf file(s) = %s" % pcf)
             pcl = ConfigParser()
